[package]
name = "mizet"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.1.0"
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "defmt", "executor-interrupt", "executor-thread"] }
embassy-rp = { version = "0.9.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }
embedded-graphics = "0.8.2"
panic-probe = "1.0.0"
ssd1306 = { version = "0.10.0" }

[profile.release]
# Enable generation of debug symbols even on release builds
debug = true
